--- a/assets/styles/scss/_header.scss
+++ b/assets/styles/scss/_header.scss
@@ -9,11 +9,14 @@ body{
         align-items: center;
         padding-left: 10%;
         padding-right: 10%;
+        user-select: none;
         nav{
             flex:1;
             display: flex;
             // background-color: aqua;
             justify-content: center;
+
+
             .nav_link_container{
                 // background-color: aqua;
                 padding: 10px;
