--- a/pages/work/assets/styles/scss/main.scss
+++ b/pages/work/assets/styles/scss/main.scss
@@ -54,8 +54,6 @@ body {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    // margin-left: 10%;
-                    // margin-right: 10%;
 
                     .right_side_container {
                         background-image: url(/pages/work/assets/img/IMG_3720.JPG);
@@ -69,6 +67,72 @@ body {
                 }
 
             }
+
+            .first_tab {
+                position: relative;
+                width: 100%;
+                height: 720px;
+                // padding-left: 10%;
+                // padding-right: 10%;
+
+                .first_tab_container {
+
+                    border-bottom: 1.5px solid black;
+                    // width: 100%;
+                    height: 100%;
+                    margin-left: 10%;
+                    margin-right: 10%;
+                    // background-color: aqua;
+                    display: flex;
+                    // justify-content: center;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .tag_button {}
+
+                    h1 {}
+
+                    h2 {
+                        width: 50%;
+                        color: var(--text-icons-light-medium-emphasis, rgba(0, 0, 0, 0.60));
+                        text-align: center;
+                        font-family: Arial;
+                        font-size: 24px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 120%;
+                        /* 28.8px */
+                        letter-spacing: 0.017px;
+                    }
+                    .contact_btn{
+                        
+                    }
+
+                }
+
+                .gradiend {
+                    position: absolute;
+
+                    svg {
+                        fill: linear-gradient(180deg, #FC50B7 0%, rgba(255, 197, 111, 0.46) 100%);
+                        filter: blur(100px);
+                        width: 100%;
+                        height: 720px;
+                    }
+                }
+            }
+
+            .second_tab {
+                width: 100%;
+                height: 720px;
+                // padding-left: 10%;
+                // padding-right: 10%;
+
+                .second_tab_container {}
+
+            }
+
+            .third_tab {}
         }
     }
 }
